--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <configuration>
           <source>9</source>
           <target>9</target>
@@ -20,6 +21,11 @@
   <name>swrng-provider</name>
   <url>https://github.com/catap/swrng-provider</url>
   <dependencies>
+    <dependency>
+      <groupId>com.github.purejavacomm</groupId>
+      <artifactId>purejavacomm</artifactId>
+      <version>1.0.1.RELEASE</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
